# startsconverter

./: Doxyfile  README.md  logging.prop  meson.build
src/: AbstractPalette.h  Bootstrap.cpp  Bootstrap.h  Breeze.cpp  Breeze.h  CampaignConverter.cpp  CampaignConverter.h  Casc.cpp  Casc.h  Chk.cpp  Chk.h  Converter.h  CursorConverter.cpp  CursorConverter.h  DatConverter.cpp  DatConverter.h  Dds.cpp  FileUtil.cpp  FileUtil.h  Font.cpp  GameUIConverter.cpp  GameUIConverter.h  GraphicsConverter.cpp  GraphicsConverter.h  Grp.cpp  Grp.h  ImagesConverter.cpp  ImagesConverter.h  Palette.cpp  Palette.h  Palette2D.cpp  Palette2D.h  PaletteConverter.cpp  PaletteConverter.h  PaletteImage.cpp  PaletteImage.h  PaletteManager.cpp  PaletteManager.h  Panel.cpp  Panel.h  (+34 more)
src/dat/: DataHub.cpp  DataHub.h  Image.cpp  Image.h  ObjectAccess.h  Order.cpp  Order.h  Sprite.cpp  Tech.cpp  Tech.h  Unit.cpp  Unit.h  Upgrade.cpp  Upgrade.h  Weapon.cpp  Weapon.h  meson.build
src/iscript/: IScript.cpp  IScript.h  IScriptConverter.cpp  IScriptConverter.h  meson.build  opcode_types.cpp  opcode_types.h
src/kaitai/: chk_parser.cpp  chk_parser.h  chk_parser.ksy  flingy_dat.cpp  flingy_dat.h  flingy_dat.ksy  kaitai_generate.sh  lo_overlay.cpp  lo_overlay.h  lo_overlay.ksy  meson.build  sprites_dat.cpp  sprites_dat.h  sprites_dat.ksy  techdata_dat.cpp  techdata_dat.h  techdata_dat.ksy  tileset_cv5.cpp  tileset_cv5.h  tileset_cv5.ksy  tileset_vf4.cpp  tileset_vf4.h  tileset_vf4.ksy  tileset_vr4.cpp  tileset_vr4.h  tileset_vr4.ksy  tileset_vx4.cpp  tileset_vx4.h  tileset_vx4.ksy  units_dat.cpp  units_dat.h  units_dat.ksy  (+3 more)
(+54 files in other folders)
